@@ -29,6 +29,9 @@ install-hw-detect: hw-detect.sh
 	$(INSTALL) hotplug-pcmcia.sh $(bindir)/hotplug-pcmcia
 	$(INSTALL) -d $(pbcdir)
 	$(INSTALL) hw-detect.prebaseconfig $(pbcdir)/30hw-detect
+ifeq ($(DEB_HOST_ARCH),powerpc)
+	$(INSTALL) discover-mac-io.sh $(bindir)/discover-mac-io
+endif
 
 install-hw-detect-full:
 
