@@ -3,6 +3,8 @@ ddetect (1.02) UNRELEASED; urgency=low
   * Colin Watson
     - Don't bother trying to load psmouse in d-i; just register it for use
       after the first reboot.
+    - Move mac-io hardware detection out to a separate file, only installed
+      on powerpc.
   * Joshua Kwan
     - Add USB stuff to devnames.txt.
     - Don't try to load sbp2 unless we also have scsi_mod lying around.
